# opago-lightning-travel-rule-demo

./: .env.example  .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES  package-lock.json  package.json  pyproject.toml
frontend/: app.js  base.css  eid.js  index.html  style.css  websocket.js
scripts/runtime/: spark_wallet_bridge.mjs
scripts/testing/: prepare_test_wallets.py  start_test_transaction.sh
src/opago_mica/: __init__.py  __main__.py
src/opago_mica/compliance/: __init__.py  gtr_adapter.py  travel_rule_manager.py  travel_rule_provider.py  trisa_adapter.py  trp_adapter.py  trust_adapter.py
src/opago_mica/compliance/trisa_grpc/: __init__.py
src/opago_mica/compliance/trisa_grpc/ivms101/: enum_pb2.py  enum_pb2_grpc.py  ivms101_pb2.py  ivms101_pb2_grpc.py
src/opago_mica/compliance/trisa_grpc/trisa/api/v1beta1/: api_pb2.py  api_pb2_grpc.py  errors_pb2.py  errors_pb2_grpc.py
src/opago_mica/compliance/trisa_grpc/trisa/gds/api/v1beta1/: api_pb2.py  api_pb2_grpc.py
src/opago_mica/config/: __init__.py
src/opago_mica/core/: __init__.py  compliance_engine.py  uma_mica.py
src/opago_mica/eidas/: __init__.py  eidas_wallet.py
src/opago_mica/receiving/: __init__.py  receiver.py  receiver_server.py
src/opago_mica/sending/: __init__.py  sender.py  sender_server.py
src/opago_mica/types/: __init__.py  common.py  eidas.py  ivms101.py  uma.py  uma_extended.py
src/opago_mica/utils/: __init__.py  crypto.py  logger.py  runtime_env.py  uma_keys.py  url.py
src/opago_mica/wallet/: __init__.py  spark_wallet.py  wallet_factory.py
(+4 files in other folders)
