[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opago-mica-reference"
version = "0.1.0"
description = "MiCA-compliant Lightning Network transactions reference implementation by opago GmbH"
requires-python = ">=3.12"
license = {text = "SEE LICENSE IN LICENSE"}
authors = [{ name = "opago GmbH", email = "info@opago-pay.com" }]
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "joserfc>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "mnemonic>=0.21",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "grpcio>=1.78.0",
    "protobuf>=6.31.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "grpcio-tools>=1.78.0",
]

[project.scripts]
opago-mica = "opago_mica.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opago_mica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["src/opago_mica/compliance/trisa_grpc"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B017", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
